# ulc

./: .gitignore  lexer.rs  pyproject.toml  readme.md
calc/: Cargo.toml
calc/src/: ast.rs  lib.rs  main.rs
calc/src/compiler/: interpreter.rs
docs/: doc.md
tests/: test_ulc.py
ulc/: __init__.py  chatbot.py  scraper.py
v1/: language-tagger.py
