[tool.poetry]
name = "ulc"
version = "0.1.0"
description = ""
authors = ["Athul Muralidhar <athul.muralidhar@bricr.com>"]

[tool.poetry.dependencies]
python = "^3.9"
spacy = "^3.0.6"
ipdb = "^0.13.7"
spacy-transformers = "^1.0.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
