[tool.poetry]
name = "ulc"
version = "0.1.0"
description = ""
authors = ["Athul Muralidhar <athul.muralidhar@bricr.com>"]

[tool.poetry.dependencies]
python = "^3.9"
ipdb = "^0.13.7"
spacy-transformers = "^1.0.2"
requests = "^2.25.1"
nltk = "^3.6.2"
beautifulsoup4 = "^4.9.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
